Bodge to 'fix' overflow

--- a/css/style.css
+++ b/css/style.css
@@ -21,16 +21,18 @@ body {
     position: relative;
     border: 2px solid black;
     background-color: #7DF9FF;
+    overflow: hidden;
 }
 
 #numbers {
     position: absolute;
     bottom: 0;
-    right: 0;
+    left: 0;
     padding: 8px 8px;
     font-size: 1.75em;
     margin: 0;
     font-family: 'Orbitron', sans-serif;
+    overflow: hidden;
 }
 
 .row {
